--- a/Dockerfile-dogstatsd-alpine
+++ b/Dockerfile-dogstatsd-alpine
@@ -18,9 +18,9 @@ RUN apk add -qU --no-cache curl-dev python-dev tar sysstat ca-certificates
 
 # Install build dependencies
 ADD https://raw.githubusercontent.com/DataDog/dd-agent/master/packaging/datadog-agent/source/setup_agent.sh /tmp/setup_agent.sh
-RUN apk add -qU --no-cache -t .build-deps curl gcc musl-dev linux-headers libffi-dev \
+RUN apk add -qU --no-cache -t .build-deps curl gcc musl-dev linux-headers \
     # Install the agent
-    && sh /tmp/setup_agent.sh \
+    && DD_SKIP_INTEGRATIONS=1 sh /tmp/setup_agent.sh \
     # Clean build dependencies
     && apk del -q .build-deps \
     # Clean up the install script
