--- a/hooks/build
+++ b/hooks/build
@@ -1,9 +1,9 @@
 #!/bin/bash
 set -ex
 
-AGENT_VERSION=1:5.27.1-1
-AGENT_REPO="https://apt.datadoghq.com/"
-AGENT_REPO_CHANNEL=stable
+AGENT_VERSION=1:5.28.99-dockertest.rc.1-1
+AGENT_REPO=http://apt.datad0g.com//"
+AGENT_REPO_CHANNEL=beta
 
 docker build \
         --build-arg AGENT_VERSION_ARG=${AGENT_VERSION} \
