--- a/Dockerfile-alpine
+++ b/Dockerfile-alpine
@@ -10,6 +10,7 @@ ENV DD_HOME=/opt/datadog-agent \
     DOCKER_DD_AGENT=yes \
     PYCURL_SSL_LIBRARY=openssl \
     AGENT_VERSION=$AGENT_VERSION_ARG \
+    INTEGRATIONS_VERSION=$AGENT_VERSION_ARG \
     DD_ETC_ROOT="/opt/datadog-agent/agent" \
     PATH="/opt/datadog-agent/venv/bin:/opt/datadog-agent/agent/bin:$PATH" \
     PYTHONPATH="/opt/datadog-agent/agent" \
