stretch-slim: address issue with missing man dirs

--- a/Dockerfile-dogstatsd
+++ b/Dockerfile-dogstatsd
@@ -16,6 +16,9 @@ ENV DOCKER_DD_AGENT=yes \
     DD_CONF_LOG_TO_SYSLOG=no \
     NON_LOCAL_TRAFFIC=yes
 
+# workaround for stretch-slim missing man dirs
+RUN seq 1 8 | xargs -I{} mkdir -p /usr/share/man/man{}
+
 # Install the Agent
 RUN apt-get update \
  && apt-get install --no-install-recommends -y gnupg dirmngr \
